# swerve

./: .gitignore  LICENSE  README.md
swerve_control/: CMakeLists.txt  README.md  package.xml
swerve_control/config/: swerve_control.yaml
swerve_control/launch/: swerve_control.launch
swerve_description/: CMakeLists.txt  README.md  index.html  package.xml
swerve_description/config/: fake_controllers.yaml  kinematics.yaml  ompl_planning.yaml  swerve.rviz  swerve.srdf
swerve_description/launch/: display.launch  fake_moveit_controller_manager.launch  gazebo.launch  load_description.launch  move_group.launch  ompl_planning_pipeline.launch  sensor_manager.launch  swerve_moveit_sensor_manager.launch  trajectory_execution.launch
swerve_description/meshes/: chassis.stl  swivel.stl  wheel.stl
swerve_description/robots/: swerve.urdf  swerve.urdf.xacro  swerve.xacro  swerve_description.xacro  swerve_utilities.xacro
swerve_description/urdf/: swerve.urdf.xacro  swerve.xacro  swerve_gazebo.xacro  swerve_utilities.xacro
swerve_gazebo/: CMakeLists.txt  manifest.xml  package.xml
swerve_gazebo/launch/: swerve_gazebo.launch  swerve_world.launch
swerve_gazebo/worlds/: scan_match_demo.world  swerve.world
swerve_navigation/: CMakeLists.txt  package.xml
swerve_navigation/launch/: simple_demo.launch
swerve_navigation/scripts/: test_ros_scan.m
swerve_navigation/src/: odom_pub.cpp
swerve_teensy/: CMakeLists.txt  package.xml
swerve_teensy/config/: doxygen_config.conf
swerve_teensy/examples/interval_timer/: interval_timer.ino
swerve_utilities/: CMakeLists.txt  README.md  index.html  package.xml
swerve_utilities/launch/: ros_bag.launch
swerve_utilities/scripts/: ros_bag.sh
