<package format="2">

  <name>swerve_gazebo</name>
  <version>0.0.1</version>
  <description>The Swerve Gazebo ROS package</description>

  <maintainer email="wachterfreddy@gmail.com">Frederick Wachter</maintainer>
  <author email="wachterfreddy@gmail.com">Frederick Wachter</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>


