<package format="2">

  <name>swerve_utilities</name>
  <version>0.0.1</version>
  <description>Utilitiy files for Swerve repo</description>

  <maintainer email="wachterfreddy@gmail.com">Frederick Wachter</maintainer>
  <author email="wachterfreddy@gmail.com">Frederick Wachter</author>

  <license>MIT</license>

  <url type="repository">https://github.com/SwerveRoboticSystems/swerve</url>
  <url type="bugtracker">https://github.com/SwerveRoboticSystems/swerve/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

</package>


